# smartmap

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  config.cpp  config.json  flecs_reflection_inspector.cpp  imgui.ini  main.cpp  plan.txt  project.json  project2.json  test.py
assets/: basic.frag  basic.vert  tourkit@smartsmode_19chan@basic.xml
assets/effectors/: argb.frag  atlas.frag  gradient.frag  rectangle.frag
assets/logs/: logs.txt
assets/shader/: basic.frag  basic.vert  blur_x.comp  blur_y.comp  feedback.frag  fragment_test.glsl  layer.frag  red.frag  smartmap.frag  smartmap.vert  test.frag  test.vert  vertex_test.glsl
assets/shaders/: argb.frag  atlas.frag  colorize.frag  fromAtlas.frag  rectangle.frag  rgb.frag  rgba.frag  rotate.frag.txt  texturize.frag  translate2d.frag
show/: ubo.json
src/: Mesh.cpp  Mesh.h  artnet.cpp  artnet.hpp  atlas.cpp  atlas.hpp  attribute.cpp  attribute.hpp  boilerplate.hpp  buffer.cpp  buffer.hpp  buffer2.cpp  buffer2.hpp  builder.cpp  builder.hpp  callbacks.cpp  callbacks.hpp  citp.hpp  component.cpp  component.hpp  components.hpp  config.cpp  config.hpp  data.hpp  debug.hpp  directory.cpp  directory.hpp  dmx.cpp  dmx.hpp  drawcall.cpp  drawcall.hpp  ecs.hpp  editor.cpp  editor.hpp  editors.cpp  editors.hpp  effector.cpp  effector.hpp  engine.cpp  engine.hpp  (+92 more)
src/device/: artnet.cpp  artnet.hpp
src/gl/: buffer.hpp
src/gui/: ShadertoyWindow.h  ShadetoyWindow.cpp  TreeviewWindow.cpp  TreeviewWindow.h
src/new/: ecs.hpp  graphic_engine.hpp  gui_renderer.hpp  init.hpp  vao.hpp
src/nodes/: base.hpp  model.hpp  struct.cpp  struct.hpp  vbo.cpp  vbo.hpp
src/smartmap/: config.cpp  config.hpp  layer.cpp  layer.hpp  output.cpp  output.hpp
src/utils/: string.cpp  string.h
src/widgets/: artnet_widget.cpp  artnet_widget.hpp  buffer.cpp  buffer.hpp  file.hpp  fps.hpp  stack.hpp  textures.hpp
vendors/ImGuiColorTextEdit/: TextEditor.cpp
vendors/citp-lib/: CITPDefines.h
vendors/imgui/: imgui.h  imgui_internal.h  imgui_widgets.cpp
vendors/imgui/backends/: imgui_impl_glfw.cpp
vendors/imgui/examples/example_glfw_opengl3/: main.cpp
vendors/ofxLibArtnet/artnet/: artnet.c  artnet.h  network.c
vendors/ohm/: main.cpp
web/: index.html  script.js  style.css
